--- a/package.json
+++ b/package.json
@@ -2,17 +2,34 @@
   "name": "express-simple-template",
   "version": "1.0.0",
   "description": "a simple expressjs app",
-  "main": "src/index.js",
+  "main": "dist/index.js",
   "type": "module",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon src/index.js",
-    "start": "node src/index.js"
+    "prebuild": "npx eslint .",
+    "build": "tsc",
+    "prestart": "npm run build",
+    "start": "node .",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.9.0",
+    "@typescript-eslint/eslint-plugin": "^6.11.0",
+    "@typescript-eslint/parser": "^6.11.0",
+    "eslint": "^8.53.0",
+    "eslint-plugin-jsdoc": "^46.9.0",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
+    "nodemon": "^3.0.1",
+    "typescript": "^5.2.2"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "@accordproject/markdown-transform": "^0.16.22",
+    "@xmldom/xmldom": "^0.8.10",
+    "docusign-esign": "^6.5.0",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "jszip": "^3.10.1",
+    "xpath": "^0.0.33"
   }
 }
