--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@xmldom/xmldom": "^0.8.10",
     "docusign-esign": "^6.5.0",
     "express": "^4.18.2",
+    "express-xml-bodyparser": "^0.3.0",
     "jsonwebtoken": "^9.0.2",
     "jszip": "^3.10.1",
     "xpath": "^0.0.33"
